# lol-team-soloq-viewer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.toml  docker-compose.yml  main.py  pyproject.toml
clients/: __init__.py  deeplol.py  models.py
src/: config.py  main.py  models.py
src/api/: routes.py  schemas.py
src/clients/: __init__.py  deeplol.py  leaguepedia_api.py  leaguepedia_scrape.py  leagupedia_api.py  test.py
src/db/: database.py
src/db/repositories/: champion_repo.py  competition_repo.py  player_repo.py  summoner_repo.py  team_repo.py
src/db/sql/: 001_initial_schema.sql  002_summoner_stats.sql
src/services/: champion_service.py  player_resolver.py  player_service.py  stats_service.py  team_service.py  update.py
