[project]
name = "lol-team-soloq-analyze"
version = "0.1.0"
description = "Analyze League of Legends soloq games played by pro team members"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "curl-cffi>=0.15.0",
    "dotenv>=0.9.9",
    "fastapi>=0.136.0",
    "mwrogue>=0.1.5",
    "requests>=2.32.5",
    "uvicorn>=0.45.0",
]
